[package]
name = "warp_example"
version = "0.1.0"
authors = ["Taekyung Yoo <tkyoo0627@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
